Fix align items

--- a/style/characterSelector.css
+++ b/style/characterSelector.css
@@ -182,6 +182,9 @@ header nav ul li a:hover::before {
 
 /* Responsive */
 @media (max-width: 768px) {
+  .gen-title {
+    font-size: 36px;
+  }
   .mobil {
     display: contents !important;
   }
@@ -191,7 +194,7 @@ header nav ul li a:hover::before {
     margin-left: -10px;
   }
 
-  .top-mr {
+  .cards {
     margin-top: 10px;
   }
 
