--- a/style/footer.css
+++ b/style/footer.css
@@ -167,7 +167,7 @@
 
     .social-menu {
         top: 75%;
-        padding: 10px 15px;
+        padding: 10px;
     }
 
     .social-icon img {
